[gd_scene load_steps=17 format=3 uid="uid://btnwxy8iryc5o"]

[ext_resource type="Script" path="res://assets/audio/audio_controller.gd" id="1_dsool"]
[ext_resource type="AudioStream" uid="uid://bvri5wutemcx" path="res://assets/audio/birds-singing-in-the-morning_nature-sound-146832.mp3" id="2_j46yf"]
[ext_resource type="AudioStream" uid="uid://cq36jfgnbumdg" path="res://assets/audio/EnterMenu.wav" id="3_28v6n"]
[ext_resource type="AudioStream" uid="uid://bc5c4tswk4s0q" path="res://assets/audio/Cursor.wav" id="4_x64p2"]
[ext_resource type="AudioStream" uid="uid://d4hg1bee0awfv" path="res://assets/audio/ExitMenu.wav" id="5_kxnxb"]
[ext_resource type="AudioStream" uid="uid://0swcexjeonuc" path="res://assets/audio/parabéns1.mp3" id="6_n07we"]
[ext_resource type="AudioStream" uid="uid://cbwj7y6sfi3jw" path="res://assets/audio/solução1.mp3" id="7_50436"]
[ext_resource type="AudioStream" uid="uid://docopdp3pmj0r" path="res://assets/audio/tentarNovamente.mp3" id="8_r0y1a"]
[ext_resource type="AudioStream" uid="uid://dd3h2i2kpq3eg" path="res://assets/audio/valorIncorreto.mp3" id="9_2g6ib"]
[ext_resource type="AudioStream" uid="uid://7nmvey01w7nv" path="res://assets/audio/windy-forest-and-birds-ambience-211720.mp3" id="10_nk87g"]
[ext_resource type="AudioStream" uid="uid://dbly1way4soge" path="res://assets/audio/parabéns2.mp3" id="11_wr16d"]
[ext_resource type="AudioStream" uid="uid://bat6t3aryvs33" path="res://assets/audio/solução2.mp3" id="12_fwnr8"]
[ext_resource type="AudioStream" uid="uid://dl0o0haepwuml" path="res://assets/audio/pergunta1.mp3" id="13_raq1m"]
[ext_resource type="AudioStream" uid="uid://c421t313a84b3" path="res://assets/audio/pergunta2.mp3" id="14_esbqb"]
[ext_resource type="AudioStream" uid="uid://y2kpkg245sl8" path="res://assets/audio/applause-75314.mp3" id="15_6wtw3"]
[ext_resource type="AudioStream" uid="uid://cbsalgyra1iew" path="res://assets/audio/pig-sound-43195.mp3" id="15_miqx4"]

[node name="AudioController" type="Node2D"]
script = ExtResource("1_dsool")

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_j46yf")
max_distance = 4000.0
bus = &"Music"

[node name="SelectButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_28v6n")
volume_db = 5.0

[node name="Cursor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_x64p2")

[node name="ExitMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_kxnxb")
volume_db = 5.0

[node name="Congrats1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_n07we")
volume_db = 10.0
bus = &"Voices"

[node name="Answer1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_50436")
volume_db = 10.0
bus = &"Voices"

[node name="TryAgain" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_r0y1a")
volume_db = 10.0
bus = &"Voices"

[node name="Wrong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_2g6ib")
volume_db = 10.0
bus = &"Voices"

[node name="BackgroundMusic2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_nk87g")
volume_db = 6.5
max_distance = 4000.0

[node name="Congrats2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_wr16d")
volume_db = 10.0

[node name="Answer2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_fwnr8")
volume_db = 10.0

[node name="Question1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_raq1m")
volume_db = -10.0

[node name="Question2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_esbqb")
volume_db = -10.0

[node name="pig" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_miqx4")

[node name="applause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_6wtw3")
volume_db = -10.0

[connection signal="finished" from="Answer1" to="." method="_on_answer_1_finished"]
[connection signal="finished" from="Wrong" to="." method="_on_wrong_finished"]
